jaclang/jac/larkparse.py
"""Lark parser for Jac Lang."""
from __future__ import annotations


import logging
import os
from typing import Union

import jaclang.jac.absyntree as ast
from jaclang.jac import jac_lark as jl
from jaclang.jac.constant import EdgeDir, Tokens as Tok
from jaclang.jac.passes.ir_pass import Pass
from jaclang.vendor.lark import Lark, logger


class JacParser(Pass):
    """Jac Parser."""

    dev_mode = True

    def before_pass(self) -> None:
        """Initialize parser."""
        super().before_pass()
        self.comments = []
        if JacParser.dev_mode:
            JacParser.make_dev()

    def transform(self, ir: ast.SourceString) -> ast.Module:
        """Transform input IR."""
        tree, self.comments = JacParser.parse(ir.value)
        tree = JacParser.TreeToAST(parser=self).transform(tree)
        return tree

    @staticmethod
    def _comment_callback(comment: str) -> None:
        JacParser.comment_cache.append(comment)

    @staticmethod
    def parse(ir: str) -> tuple[jl.Tree, list[str]]:
        """Parse input IR."""
        JacParser.comment_cache = []
        return (
            JacParser.parser.parse(ir),
            JacParser.comment_cache,
        )

    @staticmethod
    def make_dev() -> None:
        """Make parser in dev mode."""
        JacParser.parser = Lark.open(
            "jac.lark",
            parser="lalr",
            rel_to=__file__,
            strict=True,
            debug=True,
            lexer_callbacks={"COMMENT": JacParser._comment_callback},
        )
        logger.setLevel(logging.DEBUG)

    comment_cache = []
    parser = jl.Lark_StandAlone(lexer_callbacks={"COMMENT": _comment_callback})

    class TreeToAST(jl.Transformer):
        """Transform parse tree to AST."""

        def __init__(self, parser: JacParser, *args: bool, **kwargs: bool) -> None:
            """Initialize transformer."""
            super().__init__(*args, **kwargs)
            self.parse_ref = parser

        def ice(self) -> Exception:
            """Raise internal compiler error."""
            self.parse_ref.error("Unexpected item in parse tree!")
            return RuntimeError(
                f"{self.parse_ref.__class__.__name__} - Unexpected item in parse tree!"
            )

        def start(self, kid: list[ast.Module]) -> ast.Module:
            """Grammar rule.

            start: module
            """
            return kid[0]

        def module(self, kid: list[ast.AstNode]) -> ast.AstNode:
            """Grammar rule.

            module: (doc_tag? element (element_with_doc | element)*)?
            doc_tag (element_with_doc (element_with_doc | element)*)?
            """
            doc = kid[0] if len(kid) and isinstance(kid[0], ast.Constant) else None
            body = kid[1:] if doc else kid
            valid_body: list[ast.ElementStmt] = [
                i for i in body if isinstance(i, ast.ElementStmt)
            ]
            if len(valid_body) == len(body):
                mod = ast.Module(
                    name=self.parse_ref.mod_path.split(os.path.sep)[-1].split(".")[0],
                    doc=doc,
                    body=valid_body,
                    mod_path=self.parse_ref.mod_path,
                    rel_mod_path=self.parse_ref.rel_mod_path,
                    is_imported=False,
                    mod_link=None,
                    kid=kid,
                )
                self.mod_link = mod
                return mod
            else:
                raise self.ice()

        def element_with_doc(self, kid: list[ast.AstNode]) -> ast.ElementStmt:
            """Grammar rule.

            element_with_doc: doc_tag element
            """
            if isinstance(kid[1], ast.ElementStmt) and isinstance(kid[0], ast.Constant):
                kid[1].doc = kid[0]
                kid[1].add_kids_left([kid[0]])
                return kid[1]
            else:
                raise self.ice()

        def element(self, kid: list[ast.AstNode]) -> ast.ElementStmt:
            """Grammar rule.

            element: py_code_block
                | include_stmt
                | import_stmt
                | ability
                | architype
                | mod_code
                | test
                | global_var
            """
            if isinstance(kid[0], ast.ElementStmt):
                return kid[0]
            else:
                raise self.ice()

        def global_var(self, kid: list[ast.AstNode]) -> ast.GlobalVars:
            """Grammar rule.

            global_var: (KW_FREEZE | KW_GLOBAL) access_tag? assignment_list SEMI
            """
            is_frozen = isinstance(kid[0], ast.Token) and kid[0].name == Tok.KW_FREEZE
            access = kid[1] if isinstance(kid[1], ast.SubTag) else None
            assignments = kid[2] if access else kid[1]
            if isinstance(assignments, ast.SubNodeList):
                return ast.GlobalVars(
                    access=access,
                    assignments=assignments,
                    is_frozen=is_frozen,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def access_tag(self, kid: list[ast.AstNode]) -> ast.SubTag[ast.Token]:
            """Grammar rule.

            access_tag: COLON ( KW_PROT | KW_PUB | KW_PRIV )
            """
            if isinstance(kid[0], ast.Token) and isinstance(kid[1], ast.Token):
                return ast.SubTag[ast.Token](
                    tag=kid[1],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def test(self, kid: list[ast.AstNode]) -> ast.Test:
            """Grammar rule.

            test: KW_TEST NAME? code_block
            """
            name = kid[1] if isinstance(kid[1], ast.Name) else kid[0]
            codeblock = kid[2] if name else kid[1]
            if isinstance(codeblock, ast.SubNodeList) and isinstance(
                name, (ast.Name, ast.Token)
            ):
                return ast.Test(
                    name=name,
                    body=codeblock,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def mod_code(self, kid: list[ast.AstNode]) -> ast.ModuleCode:
            """Grammar rule.

            mod_code: KW_WITH KW_ENTRY sub_name? code_block
            """
            name = kid[2] if isinstance(kid[2], ast.SubTag) else None
            codeblock = kid[3] if name else kid[2]
            if isinstance(codeblock, ast.SubNodeList):
                return ast.ModuleCode(
                    name=name,
                    body=codeblock,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def doc_tag(self, kid: list[ast.AstNode]) -> ast.Constant:
            """Grammar rule.

            doc_tag: ( STRING | DOC_STRING )
            """
            if isinstance(kid[0], ast.Constant):
                return kid[0]
            else:
                raise self.ice()

        def py_code_block(self, kid: list[ast.AstNode]) -> ast.PyInlineCode:
            """Grammar rule.

            py_code_block: PYNLINE
            """
            if isinstance(kid[0], ast.Token):
                return ast.PyInlineCode(
                    code=kid[0],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def import_stmt(self, kid: list[ast.AstNode]) -> ast.Import:
            """Grammar rule.

            import_stmt: KW_IMPORT sub_name KW_FROM import_path COMMA import_items SEMI
                | KW_IMPORT sub_name import_path KW_AS NAME SEMI
                | KW_IMPORT sub_name import_path SEMI
            """
            lang = kid[1]
            path = kid[3] if isinstance(kid[3], ast.ModulePath) else kid[2]
            alias = kid[5] if isinstance(kid[4], ast.Name) else None
            items = kid[5] if isinstance(kid[4], ast.SubNodeList) else None
            is_absorb = False
            if (
                isinstance(lang, ast.SubTag)
                and isinstance(path, ast.ModulePath)
                and isinstance(alias, ast.Name)
                and isinstance(items, ast.SubNodeList)
            ):
                return ast.Import(
                    lang=lang,
                    path=path,
                    alias=alias,
                    items=items,
                    is_absorb=is_absorb,
                    mod_link=self.mod_link,
                    kid=kid,
                )

            else:
                raise self.ice()

        def include_stmt(self, kid: list[ast.AstNode]) -> ast.Import:
            """Grammar rule.

            include_stmt: KW_INCLUDE sub_name import_path SEMI
            """
            lang = kid[1]
            path = kid[3] if isinstance(kid[3], ast.ModulePath) else kid[2]
            is_absorb = True
            if isinstance(lang, ast.SubTag) and isinstance(path, ast.ModulePath):
                return ast.Import(
                    lang=lang,
                    path=path,
                    alias=None,
                    items=None,
                    is_absorb=is_absorb,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def import_path(self, kid: list[ast.AstNode]) -> ast.ModulePath:
            """Grammar rule.

            import_path: DOT? DOT? esc_name ((DOT esc_name)+)?
            """
            valid_path = [i for i in kid if isinstance(i, ast.Token)]
            if len(valid_path) == len(kid):
                return ast.ModulePath(
                    path=valid_path,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def import_items(
            self, kid: list[ast.AstNode]
        ) -> ast.SubNodeList[ast.ModuleItem]:
            """Grammar rule.

            import_items: (import_items COMMA)? named_refs (KW_AS NAME)?
            """
            consume = None
            name = None
            alias = None
            item = None
            item_kids = []
            if isinstance(kid[0], ast.SubNodeList):
                consume = kid[0]
                name = kid[2]
                item_kids.append(name)
            else:
                name = kid[0]
                item_kids.append(name)
            if (
                len(kid) > 2
                and isinstance(kid[-2], ast.Token)
                and kid[-2].name == Tok.KW_AS
            ):
                alias = kid[-1]
                item_kids = item_kids + [kid[-2], alias]
            if isinstance(name, ast.Name) and isinstance(alias, ast.Name):
                item = ast.ModuleItem(
                    name=name,
                    alias=alias,
                    mod_link=self.mod_link,
                    kid=item_kids,
                )
            else:
                self.ice()
            new_kid = [item, *consume.kid] if consume else [item]
            valid_kid = [i for i in new_kid if isinstance(i, ast.ModuleItem)]
            if len(valid_kid) == len(new_kid):
                return ast.SubNodeList[ast.ModuleItem](
                    items=valid_kid,
                    mod_link=self.mod_link,
                    kid=[*valid_kid],
                )
            else:
                raise self.ice()

        def architype(self, kid: list[ast.AstNode]) -> ast.ArchType:
            """Grammar rule.

            architype: decorators architype
                    | enum
                    | architype_def
                    | architype_decl
            """
            if isinstance(kid[0], ast.SubNodeList):
                if isinstance(kid[1], ast.ArchType):
                    kid[1].decorators = kid[0]
                    kid[1].add_kids_left([kid[0]])
                    return kid[1]
                else:
                    raise self.ice()
            elif isinstance(kid[0], ast.ArchType):
                return kid[0]
            else:
                raise self.ice()

        def architype_decl(self, kid: list[ast.AstNode]) -> ast.ArchType:
            """Grammar rule.

            architype_decl: arch_type access_tag? NAME inherited_archs (member_block | SEMI)
            """
            arch_type = kid[0]
            access = kid[1] if isinstance(kid[1], ast.SubTag) else None
            name = kid[2] if access else kid[1]
            inh = kid[3] if access else kid[2]
            body = (
                kid[4]
                if access and isinstance(kid[4], ast.SubNodeList)
                else kid[3]
                if isinstance(kid[3], ast.SubNodeList)
                else None
            )
            if (
                isinstance(arch_type, ast.Token)
                and isinstance(name, ast.Name)
                and isinstance(inh, ast.SubNodeList)
            ):
                return ast.Architype(
                    arch_type=arch_type,
                    name=name,
                    access=access,
                    base_classes=inh,
                    body=body,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def architype_def(self, kid: list[ast.AstNode]) -> ast.ArchDef:
            """Grammar rule.

            architype_def: abil_to_arch_chain member_block
            """
            if isinstance(kid[0], ast.ArchRefChain) and isinstance(
                kid[1], ast.SubNodeList
            ):
                return ast.ArchDef(
                    target=kid[0],
                    body=kid[1],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def arch_type(self, kid: list[ast.AstNode]) -> ast.Token:
            """Grammar rule.

            arch_type: KW_WALKER
                    | KW_OBJECT
                    | KW_EDGE
                    | KW_NODE
            """
            if isinstance(kid[0], ast.Token):
                return kid[0]
            else:
                raise self.ice()

        def decorators(self, kid: list[ast.AstNode]) -> ast.SubNodeList[ast.ExprType]:
            """Grammar rule.

            decorators: (DECOR_OP atom)+
            """
            valid_decors = [i for i in kid if isinstance(i, ast.ExprType)]
            if len(valid_decors) == len(kid) / 2:
                return ast.SubNodeList[ast.ExprType](
                    items=valid_decors,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def inherited_archs(
            self, kid: list[ast.AstNode]
        ) -> ast.SubNodeList[ast.SubNodeList[ast.NameType]]:
            """Grammar rule.

            inherited_archs: sub_name_dotted+
            """
            valid_inh = [i for i in kid if isinstance(i, ast.SubNodeList)]
            if len(valid_inh) == len(kid):
                return ast.SubNodeList[ast.SubNodeList[ast.NameType]](
                    items=valid_inh,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def sub_name_dotted(
            self, kid: list[ast.AstNode]
        ) -> ast.SubTag[ast.SubNodeList[ast.Name]]:
            """Grammar rule.

            sub_name_dotted: COLON dotted_name
            """
            if isinstance(kid[1], ast.SubNodeList):
                return ast.SubTag[ast.SubNodeList[ast.Name]](
                    tag=kid[1],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def sub_name(self, kid: list[ast.AstNode]) -> ast.SubTag[ast.Name]:
            """Grammar rule.

            sub_name: COLON NAME
            """
            if isinstance(kid[1], ast.Name):
                return ast.SubTag[ast.Name](
                    tag=kid[1],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def dotted_name(self, kid: list[ast.AstNode]) -> ast.SubNodeList[ast.NameType]:
            """Grammar rule.

            dotted_name: (dotted_name DOT)? all_refs
            """
            consume = None
            name = None
            dot = None
            if isinstance(kid[0], ast.SubNodeList):
                consume = kid[0]
                dot = kid[1]
                name = kid[2]
            else:
                name = kid[0]
            new_kid = [name, dot, *consume.kid] if consume else [name]
            valid_kid = [
                i for i in new_kid if isinstance(i, (ast.Name, ast.SpecialVarRef))
            ]
            if len(valid_kid) == (len(new_kid) / 2 + len(new_kid) % 2):
                return ast.SubNodeList[ast.NameType](
                    items=valid_kid,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def any_ref(self, kid: list[ast.AstNode]) -> ast.NameType:
            """Grammar rule.

            any_ref: special_ref
                    | named_ref
            """
            if isinstance(kid[0], ast.NameType):
                return kid[0]
            else:
                raise self.ice()

        def named_ref(self, kid: list[ast.AstNode]) -> ast.Name:
            """Grammar rule.

            named_ref: global_ref
                    | esc_name
            """
            if isinstance(kid[0], ast.Name):
                return kid[0]
            else:
                raise self.ice()

        def esc_name(self, kid: list[ast.AstNode]) -> ast.Name:
            """Grammar rule.

            esc_name: KWESC_NAME
                    | NAME
            """
            if isinstance(kid[0], ast.Name):
                return kid[0]
            else:
                raise self.ice()

        def special_ref(self, kid: list[ast.AstNode]) -> ast.SpecialVarRef:
            """Grammar rule.

            special_ref: INIT_OP
                        | ROOT_OP
                        | SUPER_OP
                        | SELF_OP
                        | HERE_OP
            """
            if isinstance(kid[0], ast.Token):
                return ast.SpecialVarRef(
                    var=kid[0],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def enum(self, kid: list[ast.AstNode]) -> ast.Enum | ast.EnumDef:
            """Grammar rule.

            enum: enum_def
                | enum_decl
            """
            if isinstance(kid[0], (ast.Enum, ast.EnumDef)):
                return kid[0]
            else:
                raise self.ice()

        def enum_decl(self, kid: list[ast.AstNode]) -> ast.Enum:
            """Grammar rule.

            enum_decl: KW_ENUM access_tag? NAME inherited_archs? (enum_block | SEMI)
            """
            access = kid[1] if isinstance(kid[1], ast.SubTag) else None
            name = kid[2] if access else kid[1]
            inh = kid[3] if access else kid[2]
            body = (
                kid[4]
                if access and isinstance(kid[4], ast.SubNodeList)
                else kid[3]
                if isinstance(kid[3], ast.SubNodeList)
                else None
            )
            if isinstance(name, ast.Name) and isinstance(inh, ast.SubNodeList):
                return ast.Enum(
                    name=name,
                    access=access,
                    base_classes=inh,
                    body=body,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def enum_def(self, kid: list[ast.AstNode]) -> ast.EnumDef:
            """Grammar rule.

            enum_def: arch_to_enum_chain enum_block
            """
            if isinstance(kid[0], ast.ArchRefChain) and isinstance(
                kid[1], ast.SubNodeList
            ):
                return ast.EnumDef(
                    target=kid[0],
                    body=kid[1],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def enum_block(
            self, kid: list[ast.AstNode]
        ) -> ast.SubNodeList[ast.EnumBlockStmt]:
            """Grammar rule.

            enum_block: LBRACE enum_stmt_list? RBRACE
            """
            if isinstance(kid[1], ast.SubNodeList):
                kid[1].add_kids_left([kid[0]])
                kid[1].add_kids_right([kid[2]])
                return kid[1]
            else:
                return ast.SubNodeList[ast.EnumBlockStmt](
                    items=[],
                    mod_link=self.mod_link,
                    kid=kid,
                )

        def enum_stmt_list(
            self, kid: list[ast.AstNode]
        ) -> ast.SubNodeList[ast.EnumBlockStmt]:
            """Grammar rule.

            enum_stmt_list: (enum_stmt_list COMMA)? enum_item
            """
            consume = None
            name = None
            comma = None
            if isinstance(kid[0], ast.SubNodeList):
                consume = kid[0]
                comma = kid[1]
                name = kid[2]
            else:
                name = kid[0]
            new_kid = [name, comma, *consume.kid] if consume else [name]
            valid_kid = [i for i in new_kid if isinstance(i, ast.EnumBlockStmt)]
            if len(valid_kid) == (len(new_kid) / 2 + len(new_kid) % 2):
                return ast.SubNodeList[ast.EnumBlockStmt](
                    items=valid_kid,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def enum_item(self, kid: list[ast.AstNode]) -> ast.EnumBlockStmt:
            """Grammar rule.

            enum_item: NAME EQ expression
                    | NAME
            """
            if isinstance(kid[0], ast.Name):
                if len(kid) == 1:
                    return kid[0]
                elif isinstance(kid[2], ast.ExprType):
                    return ast.Assignment(
                        target=kid[0],
                        value=kid[2],
                        mod_link=self.mod_link,
                        kid=kid,
                    )
            raise self.ice()

        def ability(self, kid: list[ast.AstNode]) -> ast.Ability | ast.AbilityDef:
            """Grammar rule.

            ability: decorators ability
                    | ability_def
                    | KW_ASYNC ability_decl
                    | ability_decl
            """
            if isinstance(kid[0], ast.SubNodeList):
                if isinstance(kid[1], (ast.Ability, ast.AbilityDef)):
                    kid[1].decorators = kid[0]
                    kid[1].add_kids_left([kid[0]])
                    return kid[1]
                else:
                    raise self.ice()
            elif isinstance(kid[0], (ast.Ability, ast.AbilityDef)):
                return kid[0]
            else:
                raise self.ice()

        def ability_decl(self, kid: list[ast.AstNode]) -> ast.Ability:
            """Grammar rule.

            ability_decl: KW_STATIC? KW_CAN access_tag? any_ref (func_decl | event_clause) (code_block | SEMI)
            """
            chomp = [*kid]
            is_static = isinstance(chomp[0], ast.Token)
            chomp = chomp[1:] if is_static else chomp
            access = chomp[0] if isinstance(chomp[0], ast.SubTag) else None
            chomp = chomp[1:] if access else chomp
            name = chomp[0]
            chomp = chomp[1:]
            is_func = isinstance(chomp[0], ast.FuncSignature)
            signature = chomp[0]
            chomp = chomp[1:]
            body = chomp[0] if isinstance(chomp[0], ast.SubNodeList) else None
            if isinstance(name, ast.NameType) and isinstance(
                signature, (ast.FuncSignature, ast.EventSignature)
            ):
                return ast.Ability(
                    name_ref=name,
                    is_func=is_func,
                    is_async=False,
                    is_static=is_static,
                    is_abstract=False,
                    access=access,
                    signature=signature,
                    body=body,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def ability_def(self, kid: list[ast.AstNode]) -> ast.AbilityDef:
            """Grammar rule.

            ability_def: arch_to_abil_chain (func_decl | event_clause) code_block
            """
            if (
                isinstance(kid[0], ast.ArchRefChain)
                and isinstance(kid[1], (ast.FuncSignature, ast.EventSignature))
                and isinstance(kid[2], ast.SubNodeList)
            ):
                return ast.AbilityDef(
                    target=kid[0],
                    signature=kid[1],
                    body=kid[2],
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def abstract_ability(self, kid: list[ast.AstNode]) -> ast.Ability:
            """Grammar rule.

            abstract_ability: KW_STATIC? KW_CAN access_tag? any_ref (func_decl | event_clause) KW_ABSTRACT SEMI
            """
            chomp = [*kid]
            is_static = isinstance(chomp[0], ast.Token)
            chomp = chomp[1:] if is_static else chomp
            access = chomp[0] if isinstance(chomp[0], ast.SubTag) else None
            chomp = chomp[1:] if access else chomp
            name = chomp[0]
            chomp = chomp[1:]
            is_func = isinstance(chomp[0], ast.FuncSignature)
            signature = chomp[0]
            chomp = chomp[1:]
            if isinstance(name, ast.NameType) and isinstance(
                signature, (ast.FuncSignature, ast.EventSignature)
            ):
                return ast.Ability(
                    name_ref=name,
                    is_func=is_func,
                    is_async=False,
                    is_static=is_static,
                    is_abstract=True,
                    access=access,
                    signature=signature,
                    body=None,
                    mod_link=self.mod_link,
                    kid=kid,
                )
            else:
                raise self.ice()

        def event_clause(self, kid: list[ast.AstNode]) -> ast.EventSignature:
            """Grammar rule.
